examples/c/error-codes/violates-constraint/fatal/CV-CCV10-bad-static.output
CV-CCV10-bad-static.c:8:7: error: used type 'struct str' where arithmetic or pointer type is required
      (struct str)p;
      ^           ~
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
